Fixed spacing for the logout button

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -8,7 +8,8 @@
 
 #current-user{
   font-size: 1.75rem;
-  background-color: rgba(40,40,40,0.5)
+  background-color: #262626;
+  padding:0.25rem;
 }
 .list-inline-item{
 }
@@ -135,7 +136,7 @@
     font-size: 1.25rem
   }
   .btn-log-out{
-    font-size: 1.5rem !important
+    font-size: 1.25rem !important
   }
   .user-title{
     font-size: 2.5rem
@@ -181,6 +182,10 @@
 
   .user-table-top{
       font-size: 1.75rem
+  }
+
+  .home-col{
+    width: 50%
   }
 }
 
